develop: renaming `predictor_svm` into `learner_svm` (#83)
* require e1071
* removing probability argument + tests + examples

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,7 @@ export(learner_hal)
 export(learner_isoreg)
 export(learner_mars)
 export(learner_sl)
+export(learner_svm)
 export(learner_xgboost)
 export(ml_model)
 export(nondom)
@@ -77,7 +78,6 @@ export(pava)
 export(predictor_grf)
 export(predictor_grf_binary)
 export(predictor_nb)
-export(predictor_svm)
 export(riskreg)
 export(riskreg_cens)
 export(riskreg_fit)
