--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ S3method(predict,superlearner)
 S3method(print,calibration)
 S3method(print,cross_validated)
 S3method(print,cross_validated.learner_sl)
+S3method(print,design)
 S3method(print,naivebayes)
 S3method(print,summarized_learner)
 S3method(print,summary.ate.targeted)
