--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,6 +63,7 @@ export(estimate_truncatedscore)
 export(expand.list)
 export(isoregw)
 export(learner)
+export(learner_expand_grid)
 export(learner_gam)
 export(learner_glm)
 export(learner_glmnet_cv)
