fixing imports of lava

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,11 +81,13 @@ export(learner_xgboost)
 export(ml_model)
 export(naivebayes)
 export(nondom)
+export(parameter)
 export(pava)
 export(riskreg)
 export(riskreg_cens)
 export(riskreg_fit)
 export(riskreg_mle)
+export(score)
 export(scoring)
 export(sim)
 export(softmax)
