--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ S3method(print,calibration)
 S3method(print,cross_validated)
 S3method(print,cross_validated.learner_sl)
 S3method(print,design)
+S3method(print,learner.list)
 S3method(print,naivebayes)
 S3method(print,summarized_learner)
 S3method(print,summary.ate.targeted)
@@ -73,6 +74,7 @@ export(learner_isoreg)
 export(learner_mars)
 export(learner_naivebayes)
 export(learner_sl)
+export(learner_stratify)
 export(learner_svm)
 export(learner_xgboost)
 export(ml_model)
@@ -87,6 +89,7 @@ export(scoring)
 export(softmax)
 export(solve_ode)
 export(specify_ode)
+export(stratify)
 export(superlearner)
 import(Rcpp)
 import(methods)
