--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
 .RDataTmp
 pkgdown
 .vscode
+inst/README.md
+inst/README.html
+inst/README.rmarkdown
+inst/NB.R
+inst/man
+inst/*.yaml
+ex.R
+inst/procform.R
+inst/subjumps.R
 man/figures/logo.*
 docs
 inst/doc
