--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,10 +44,12 @@ S3method(update,design)
 S3method(vcov,targeted)
 S3method(weights,numeric)
 S3method(weights,superlearner)
+export(IC)
 export(ML)
 export(RATE)
 export(RATE.surv)
 export(SL)
+export(Surv)
 export(aipw)
 export(alean)
 export(ate)
@@ -59,6 +61,7 @@ export(crr)
 export(cumhaz)
 export(cv)
 export(design)
+export(estimate)
 export(estimate_truncatedscore)
 export(expand.list)
 export(isoregw)
@@ -78,15 +81,19 @@ export(learner_xgboost)
 export(ml_model)
 export(naivebayes)
 export(nondom)
+export(parameter)
 export(pava)
 export(riskreg)
 export(riskreg_cens)
 export(riskreg_fit)
 export(riskreg_mle)
+export(score)
 export(scoring)
+export(sim)
 export(softmax)
 export(solve_ode)
 export(specify_ode)
+export(strata)
 export(superlearner)
 import(Rcpp)
 import(methods)
@@ -109,6 +116,7 @@ importFrom(lava,logit)
 importFrom(lava,na.pass0)
 importFrom(lava,parameter)
 importFrom(lava,score)
+importFrom(lava,sim)
 importFrom(optimx,optimx)
 importFrom(rlang,call_match)
 importFrom(rlang,hash)
@@ -150,6 +158,8 @@ importFrom(stats,update)
 importFrom(stats,vcov)
 importFrom(stats,weighted.mean)
 importFrom(stats,weights)
+importFrom(survival,Surv)
+importFrom(survival,strata)
 importFrom(survival,survfit)
 importFrom(utils,capture.output)
 importFrom(utils,getFromNamespace)
