update ode example

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,9 +8,11 @@ S3method(cv,default)
 S3method(cv,learner_sl)
 S3method(estimate,learner)
 S3method(estimate,ml_model)
+S3method(labels,targeted)
 S3method(logLik,targeted)
 S3method(model.matrix,design)
 S3method(parameter,summary.truncatedscore)
+S3method(parameter,targeted)
 S3method(plot,calibration)
 S3method(predict,calibration)
 S3method(predict,density)
@@ -34,6 +36,7 @@ S3method(print,superlearner)
 S3method(print,targeted)
 S3method(score,cross_validated)
 S3method(score,superlearner)
+S3method(subset,estimate)
 S3method(summary,ate.targeted)
 S3method(summary,cross_validated)
 S3method(summary,design)
@@ -41,6 +44,7 @@ S3method(summary,riskreg.targeted)
 S3method(summary,targeted)
 S3method(summary,truncatedscore)
 S3method(terms,design)
+S3method(transform,targeted)
 S3method(update,design)
 S3method(vcov,targeted)
 S3method(weights,numeric)
