namespace, cv.learner

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(coef,cross_validated)
 S3method(coef,summary.truncatedscore)
 S3method(coef,targeted)
 S3method(cv,default)
+S3method(cv,learner)
 S3method(cv,learner_sl)
 S3method(estimate,learner)
 S3method(estimate,ml_model)
