--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,7 +37,7 @@ S3method(print,superlearner)
 S3method(print,targeted)
 S3method(score,cross_validated)
 S3method(score,superlearner)
-S3method(subset,estimate)
+S3method(subset,targeted)
 S3method(summary,ate.targeted)
 S3method(summary,cross_validated)
 S3method(summary,design)
@@ -154,6 +154,7 @@ importFrom(stats,model.response)
 importFrom(stats,na.omit)
 importFrom(stats,na.pass)
 importFrom(stats,nlminb)
+importFrom(stats,offset)
 importFrom(stats,pchisq)
 importFrom(stats,predict)
 importFrom(stats,quantile)
