--- a/.github/workflows/r_check.yaml
+++ b/.github/workflows/r_check.yaml
@@ -5,6 +5,8 @@ on:
   pull_request:
     branches: [main, dev]
     # types: [opened, synchronize, reopened, ready_for_review]
+  push:
+    branches: [main]
 
 jobs:
   r-cmd-check:
