--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -11,6 +11,8 @@
 ^tmp$
 ^.vscode$
 ^Makefile$
+^src/target/src/.*\.o$
+^src/target/Makefile$
 ^src/target/lib$
 ^src/target/build$
 ^src/target/doc$
