Fix: Makevars + github actions (#114)

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,4 +1,5 @@
 ^.github$
+^.cache$
 ^\.git$
 ^.gitignore$
 ^.editorconfig$
@@ -10,6 +11,9 @@
 ^tmp$
 ^.vscode$
 ^Makefile$
+^src/target/src/.*\.o$
+^src/target/src/.*\.so$
+^src/target/Makefile$
 ^src/target/lib$
 ^src/target/build$
 ^src/target/doc$
