--- a/.github/workflows/r_check.yaml
+++ b/.github/workflows/r_check.yaml
@@ -68,6 +68,6 @@ jobs:
           Rscript -e 'pkgdown::deploy_to_branch(new_process = FALSE)'
 
       - name: Code Coverage
-        if: success() && contains('refs/heads/main', github.ref)
+        if: success() && (contains('refs/heads/main', github.ref) || contains('refs/heads/deploy', github.ref))
         run: covr::codecov(type=c("tests", "examples"))
         shell: Rscript {0}
