code coverage config

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -1,6 +1,11 @@
 codecov:
   branch: main # set default branch
 
+coverage:
+  precision: 2
+  round: down
+  range: 60..100
+
 ignore:
   - "tests"
   - "data"
