cate now calculates projection/ATE for each possible contrast combination

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ S3method(print,learner.list)
 S3method(print,naivebayes)
 S3method(print,summarized_learner)
 S3method(print,summary.ate.targeted)
+S3method(print,summary.cate.targeted)
 S3method(print,summary.riskreg.targeted)
 S3method(print,summary.targeted)
 S3method(print,summary.truncatedscore)
@@ -39,6 +40,7 @@ S3method(score,cross_validated)
 S3method(score,superlearner)
 S3method(subset,targeted)
 S3method(summary,ate.targeted)
+S3method(summary,cate.targeted)
 S3method(summary,cross_validated)
 S3method(summary,design)
 S3method(summary,riskreg.targeted)
@@ -46,6 +48,7 @@ S3method(summary,targeted)
 S3method(summary,truncatedscore)
 S3method(terms,design)
 S3method(transform,targeted)
+S3method(update,cate.targeted)
 S3method(update,design)
 S3method(vcov,targeted)
 S3method(weights,numeric)
