--- a/NAMESPACE
+++ b/NAMESPACE
@@ -106,6 +106,7 @@ export(specify_ode)
 export(strata)
 export(stratify)
 export(superlearner)
+export(test_sw)
 import(Rcpp)
 import(methods)
 importFrom(R6,R6Class)
