unit-tests and summary method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ S3method(print,summary.targeted)
 S3method(print,summary.truncatedscore)
 S3method(print,superlearner)
 S3method(print,targeted)
+S3method(print,test_adj)
 S3method(score,cross_validated)
 S3method(score,superlearner)
 S3method(subset,targeted)
@@ -106,7 +107,7 @@ export(specify_ode)
 export(strata)
 export(stratify)
 export(superlearner)
-export(test_sw)
+export(test_intersection_sw)
 import(Rcpp)
 import(methods)
 importFrom(R6,R6Class)
