--- a/NAMESPACE
+++ b/NAMESPACE
@@ -160,6 +160,7 @@ importFrom(stats,na.pass)
 importFrom(stats,nlminb)
 importFrom(stats,offset)
 importFrom(stats,pchisq)
+importFrom(stats,pnorm)
 importFrom(stats,predict)
 importFrom(stats,quantile)
 importFrom(stats,reformulate)
