--- a/NAMESPACE
+++ b/NAMESPACE
@@ -106,7 +106,7 @@ export(specify_ode)
 export(strata)
 export(stratify)
 export(superlearner)
-export(test_sw)
+export(test_intersection_sw)
 import(Rcpp)
 import(methods)
 importFrom(R6,R6Class)
@@ -160,6 +160,7 @@ importFrom(stats,na.pass)
 importFrom(stats,nlminb)
 importFrom(stats,offset)
 importFrom(stats,pchisq)
+importFrom(stats,pnorm)
 importFrom(stats,predict)
 importFrom(stats,quantile)
 importFrom(stats,reformulate)
